# cephalo-landmarks

./: .gitignore  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml
backend/: celeryworker.dockerfile
backend/app/: pyproject.toml  worker-start.sh
backend/app/alembic/versions/: 1276f064b13a_add_cephalo_and_cephalo_landamrks.py  c04fc87e87fc_add_meausurement_model.py
backend/app/app/: worker.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: cephalo.py
backend/app/app/core/: celery_app.py
backend/app/app/crud/: __init__.py  crud_cephalo.py  crud_cephalo_landmark.py  crud_cephalo_measurement.py
backend/app/app/db/: base.py
backend/app/app/models/: __init__.py  cephalo.py  cephalo_landmark.py  cephalo_measurement.py
backend/app/app/nn_models/cephalo/: CephaloXrayData.py  cephaloConstants.py  cephalo_predict.py  model.py  pyramid.py  scratch.py
backend/app/app/nn_models/cephalo/inputs/: cephalo_landmarks.csv
backend/app/app/schemas/: __init__.py  cephalo.py  cephalo_landmark.py  cephalo_measurement.py
docs/: docs.md
frontend/: .env
frontend/streamlit/: Dockerfile  pyproject.toml  streamlit-app.py  streamlit-start.sh
frontend/streamlit/pages/cephalo_landmarks/: cephaloConstants.py  page.py
frontend/streamlit/pages/introduction/: introduction.md  page.py
frontend/streamlit/pages/preterm/: page.py
