[tool.poetry]
name = "model-frontend"
version = "0.1.0"
description = ""
authors = ["Richard Szczerba <richardszczerba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
streamlit = "^0.76.0"
matplotlib = "^3.3.4"
pandas = "^1.2.2"
numpy = "^1.20.1"
Pillow = "^8.1.0"
awscli = "^1.19.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
